@@ -1,7 +1,7 @@
 // { dg-options "-std=gnu++0x" }
 // { dg-do compile }
 
-// Copyright (C) 2010, 2011, 2012 Free Software Foundation
+// Copyright (C) 2012 Free Software Foundation
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -18,23 +18,27 @@
 // with this library; see the file COPYING3.  If not see
 // <http://www.gnu.org/licenses/>.
 
-// 20.9.11.2 Template class shared_ptr [util.smartptr.shared]
-
 #include <memory>
 
-// incomplete type
-struct X;
+// libstdc++/52924
 
-// get an auto_ptr rvalue
-std::auto_ptr<X>&& ap();
+struct A { } a;
 
-void test01()
+struct D {
+  ~D() noexcept(false) { }
+  void operator()(A*) { }
+} d;
+
+auto sp = std::shared_ptr<A>(&a, d);
+
+template<typename T>
+struct Alloc : std::allocator<T>
 {
-  X* px = 0;
-  std::shared_ptr<X> p1(px);   // { dg-error "here" }
-  // { dg-error "incomplete" "" { target *-*-* } 775 }
+  Alloc() = default;
+  ~Alloc() noexcept(false) { }
+  template<typename U> Alloc(const Alloc<U>&) { }
+};
 
-  std::shared_ptr<X> p9(ap());  // { dg-error "here" }
-  // { dg-error "incomplete" "" { target *-*-* } 869 }
+Alloc<A> al;
 
-}
+auto as = std::allocate_shared<A>(al);
